samples/_failures_safe/1761185882_7c4a92_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ebf9715d.c: In function ‘main’:
./samples/SAFE/__tmp_ebf9715d.c:126:24: error: missing terminating " character
  126 |                 printf("Enter first matrix:\n
      |                        ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ebf9715d.c:126:17: error: expected expression at end of input
  126 |                 printf("Enter first matrix:\n
      |                 ^~~~~~
./samples/SAFE/__tmp_ebf9715d.c:126:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ebf9715d.c:126:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ebf9715d.c:126:17: error: expected declaration or statement at end of input
